bug squashin, variable input base path feature and change to allow source write over conditions set on forcing path only type, probs some other stuff

--- a/main.css
+++ b/main.css
@@ -125,6 +125,7 @@ html, body {
 /* variable path input styling */
 .variable_set_input {
 	position: relative;
+	font-size: 16px;
 }
 
 .variable_set_input_field {
